--- a/src/lang/zh-CN/manage.json
+++ b/src/lang/zh-CN/manage.json
@@ -9,6 +9,7 @@
     "other": "其他",
     "users": "用户",
     "storages": "存储",
+    "shares": "分享",
     "metas": "元信息",
     "profile": "个人资料",
     "about": "关于",
