--- a/src/lang/zh-CN/drivers.json
+++ b/src/lang/zh-CN/drivers.json
@@ -70,6 +70,12 @@
     "AccessToken": "访问令牌",
     "ClientID": "客户端 ID",
     "ClientSecret": "客户端密钥",
+    "DirectLink": "使用直链",
+    "DirectLink-tips": "下载文件时使用直链",
+    "DirectLinkPrivateKey": "直链鉴权密钥",
+    "DirectLinkPrivateKey-tips": "直链鉴权密钥，如果启用了 URL 鉴权",
+    "DirectLinkValidDuration": "直链鉴权有效期",
+    "DirectLinkValidDuration-tips": "分钟，如果启用了 URL 鉴权",
     "RefreshToken": "刷新令牌",
     "UploadThread": "上传线程",
     "UploadThread-tips": "上传使用的线程数",
@@ -402,6 +408,17 @@
     "thumbnail": "缩略图",
     "thumbnail-tips": "启用在缩略图文件夹下预先生成的缩略图"
   },
+  "Degoo": {
+    "access_token": "访问令牌",
+    "access_token-tips": "Degoo API 访问令牌，自动获取",
+    "password": "密码",
+    "password-tips": "您的 Degoo 帐户密码",
+    "refresh_token": "刷新令牌",
+    "refresh_token-tips": "用于自动更新令牌的刷新令牌，自动获取",
+    "root_folder_id": "根文件夹 ID",
+    "username": "用户名",
+    "username-tips": "您的 Degoo 帐户电子邮件"
+  },
   "Doge": {
     "access_key_id": "访问密钥 ID",
     "add_filename_to_disposition": "添加 Filename 到 Disposition",
@@ -720,7 +737,7 @@
     "tenant_id": "租户 ID"
   },
   "OpenList": {
-    "forward_archive_requests": "转发解压请求",
+    "forward_archive_requests": "转发压缩文件请求",
     "meta_password": "元信息密码",
     "pass_ua_to_upsteam": "传递 UA 至上游",
     "password": "密码",
@@ -728,6 +745,13 @@
     "token": "令牌",
     "url": "链接",
     "username": "用户名"
+  },
+  "OpenListShare": {
+    "forward_archive_requests": "转发压缩文件请求",
+    "pwd": "分享码",
+    "root_folder_path": "根文件夹路径",
+    "sid": "分享ID",
+    "url": "URL"
   },
   "PikPak": {
     "captcha_token": "验证码",
@@ -895,6 +919,18 @@
     },
     "root_folder_id": "根文件夹 ID",
     "use_s3_upload_method": "使用 S3 上传方法"
+  },
+  "Teldrive": {
+    "chunk_size": "分片大小",
+    "chunk_size-tips": "分片大小，单位 MiB",
+    "cookie": "Cookie",
+    "cookie-tips": "access_token=xxx",
+    "root_folder_path": "根文件夹路径",
+    "upload_concurrency": "上传并发数量",
+    "upload_concurrency-tips": "上传并发请求",
+    "url": "URL",
+    "use_share_link": "使用分享链接",
+    "use_share_link-tips": "获取链接时创建共享链接以支持 302。如果禁用，您需要启用 Web 代理。"
   },
   "Terabox": {
     "cookie": "Cookie",
@@ -1212,6 +1248,7 @@
     "Cloudreve": {},
     "Cloudreve V4": {},
     "Crypt": {},
+    "Degoo": {},
     "Doge": {},
     "Doubao": {},
     "DoubaoShare": {},
@@ -1241,6 +1278,7 @@
     "Onedrive Sharelink": {},
     "OnedriveAPP": {},
     "OpenList": {},
+    "OpenListShare": {},
     "PikPak": {},
     "PikPakShare": {},
     "Quark": {},
@@ -1252,6 +1290,7 @@
     "Seafile": {},
     "Strm": {},
     "Teambition": {},
+    "Teldrive": {},
     "Terabox": {},
     "Thunder": {},
     "ThunderBrowser": {},
@@ -1292,6 +1331,7 @@
     "Cloudreve": "Cloudreve",
     "Cloudreve V4": "Cloudreve V4",
     "Crypt": "Crypt",
+    "Degoo": "Degoo",
     "Doge": "多吉云",
     "Doubao": "豆包",
     "DoubaoShare": "豆包分享",
@@ -1319,6 +1359,7 @@
     "Onedrive Sharelink": "OneDrive 分享链接",
     "OnedriveAPP": "OneDrive APP",
     "OpenList": "OpenList",
+    "OpenListShare": "OpenList 分享",
     "PikPak": "PikPak",
     "PikPakShare": "PikPak 分享",
     "Quark": "夸克",
@@ -1330,6 +1371,7 @@
     "Seafile": "Seafile",
     "Strm": "Strm",
     "Teambition": "Teambition 网盘",
+    "Teldrive": "Teldrive",
     "Terabox": "Terabox",
     "Thunder": "迅雷",
     "ThunderBrowser": "迅雷浏览器",
