--- a/src/lang/zh-CN/home.json
+++ b/src/lang/zh-CN/home.json
@@ -81,6 +81,7 @@
       "incorrect_password": "密码错误",
       "extract_header": "解压 {{path}} 到..."
     },
+    "share": "分享",
     "copy_link": "复制链接",
     "preview_page": "预览页面",
     "down_link": "下载链接",
