--- a/src/lang/zh-CN/settings.json
+++ b/src/lang/zh-CN/settings.json
@@ -1,5 +1,5 @@
 {
-  "allow_indexed": "Allow indexed",
+  "allow_indexed": "允许索引",
   "allow_mounted": "允许挂载",
   "announcement": "站点公告",
   "aria2_secret": "Aria2 密钥",
@@ -22,11 +22,12 @@
   "ftp_implicit_tls": "启用 FTP 隐式 TLS（ftps://）",
   "ftp_mandatory_tls": "强制使用显式 TLS（ftpes://）",
   "ftp_pasv_port_map": "被动传输端口映射",
-  "ftp_proxy_user_agent": "FTP 代理 User-Agent",
   "ftp_public_host": "FTP 公共主机",
   "ftp_tls_private_key_path": "FTP TLS 私钥路径",
   "ftp_tls_public_cert_path": "FTP TLS 证书路径",
   "hide_files": "隐藏文件",
+  "hide_storage_details": "隐藏驱动详情信息",
+  "hide_storage_details_in_manage_page": "隐藏管理页面中的驱动详情信息",
   "home_container": "主页容器",
   "home_containers": {
     "hope_container": "HOPE 容器",
@@ -92,11 +93,13 @@
     "list": "列表",
     "responsive": "响应式"
   },
-  "share_archive_preview": "分享压缩包预览",
+  "sftp_disable_password_login": "禁用 SFTP 密码登录",
+  "share_archive_preview": "允许预览分享的压缩文件",
   "share_force_proxy": "分享强制代理",
   "share_icon": "分享图标",
   "share_preview": "分享预览",
   "share_summary_content": "分享摘要内容",
+  "show_disk_usage_in_plain_text": "以普通文本展示驱动空间使用情况",
   "sign_all": "签名所有",
   "site_title": "网站标题",
   "sso_application_name": "单点登录应用名称",
