--- a/src/lang/zh-CN/drivers.json
+++ b/src/lang/zh-CN/drivers.json
@@ -119,8 +119,8 @@
     },
     "use_large_thumbnail": "使用大缩略图",
     "use_large_thumbnail-tips": "启用图片使用大缩略图",
-    "user_domain_id": "User domain id",
-    "user_domain_id-tips": "ud_id in Cookie, fill in to show disk usage"
+    "user_domain_id": "用户域 ID",
+    "user_domain_id-tips": "Cookie中的ud_id项，需要查看空间使用情况则填写"
   },
   "189Cloud": {
     "cookie": "Cookie",
@@ -363,12 +363,12 @@
     "user_name": "用户名"
   },
   "Chunk": {
-    "chunk_large_file_only": "Chunk large file only",
-    "chunk_large_file_only-tips": "chunk only if file size > part_size",
-    "chunk_prefix": "Chunk prefix",
-    "chunk_prefix-tips": "the prefix of chunk folder",
+    "chunk_large_file_only": "仅分块大文件",
+    "chunk_large_file_only-tips": "当文件大小小于分片大小时以原始形式上传文件",
+    "chunk_prefix": "分块前缀",
+    "chunk_prefix-tips": "分块文件夹的前缀",
     "custom_ext": "自定义扩展名",
-    "num_list_workers": "Num list workers",
+    "num_list_workers": "列表 Workers 数量",
     "part_size": "分块大小",
     "part_size-tips": "单位：字节",
     "remote_path": "远程存储路径",
@@ -578,7 +578,7 @@
     "chunk_size-tips": "上传分块大小 (单位：MB)",
     "client_id": "客户端 ID",
     "client_secret": "客户端密钥",
-    "disable_disk_usage": "Disable disk usage",
+    "disable_disk_usage": "禁用剩余空间显示",
     "order_by": "排序依据",
     "order_by-tips": "例如：folder, name, modifiedTime",
     "order_direction": "排序方式",
@@ -606,6 +606,18 @@
     "root_folder_path": "根文件夹路径",
     "upload_thread": "上传线程",
     "upload_thread-tips": "1 ≤ 线程 ≤ 32"
+  },
+  "HalalCloudOpen": {
+    "client_id": "Client id",
+    "client_secret": "Client secret",
+    "host": "Host",
+    "refresh_token": "Refresh token",
+    "refresh_token-tips": "If using a personal API approach, the RefreshToken is not required.",
+    "root_folder_path": "Root folder path",
+    "timeout": "Timeout",
+    "timeout-tips": "timeout in seconds",
+    "upload_thread": "Upload thread",
+    "upload_thread-tips": "1 <= thread <= 32"
   },
   "ILanZou": {
     "ip": "IP",
@@ -679,27 +691,27 @@
     "video_thumb_pos-tips": "视频缩略图的位置。如果该值是一个数字（整数点浮点），它代表几秒钟的时间。如果值以“%”结尾，则代表视频持续时间的百分比。"
   },
   "MediaFire": {
-    "chunk_size": "Chunk size",
+    "chunk_size": "分片大小",
     "cookie": "Cookie",
-    "cookie-tips": "Required for navigation",
-    "limit_rate": "Limit rate",
-    "limit_rate-tips": "limit all api request rate ([limit]r/1s)",
-    "order_by": "Order by",
+    "cookie-tips": "导航需要使用",
+    "limit_rate": "限制速率",
+    "limit_rate-tips": "限制所有 API 请求速率（[limit]r/1s）",
+    "order_by": "排序依据",
     "order_bys": {
-      "name": "Name",
-      "size": "Size",
-      "time": "Time"
+      "name": "名称",
+      "size": "大小",
+      "time": "时间"
     },
-    "order_direction": "Order direction",
+    "order_direction": "排序方式",
     "order_directions": {
-      "asc": "Asc",
-      "desc": "Desc"
+      "asc": "升序",
+      "desc": "降序"
     },
-    "root_folder_path": "Root folder path",
-    "session_token": "Session token",
-    "session_token-tips": "Required for MediaFire API",
-    "upload_threads": "Upload threads",
-    "upload_threads-tips": "concurrent upload threads"
+    "root_folder_path": "根文件夹路径",
+    "session_token": "会话令牌",
+    "session_token-tips": "MediaFire API 需要",
+    "upload_threads": "上传线程",
+    "upload_threads-tips": "上传并发请求"
   },
   "MediaTrack": {
     "access_token": "访问令牌",
@@ -760,7 +772,7 @@
     "client_secret": "客户端密钥",
     "custom_host": "自定义主机",
     "custom_host-tips": "自定义加速下载链接",
-    "disable_disk_usage": "Disable disk usage",
+    "disable_disk_usage": "禁用剩余空间显示",
     "is_sharepoint": "是否 SharePoint",
     "redirect_uri": "重定向 URI",
     "refresh_token": "刷新令牌",
@@ -786,7 +798,7 @@
     "client_secret": "客户端密钥",
     "custom_host": "自定义主机",
     "custom_host-tips": "自定义加速下载链接",
-    "disable_disk_usage": "Disable disk usage",
+    "disable_disk_usage": "禁用剩余空间显示",
     "email": "邮箱",
     "region": "地区",
     "regions": {
@@ -1345,6 +1357,7 @@
     "GoogleDrive": {},
     "GooglePhoto": {},
     "HalalCloud": {},
+    "HalalCloudOpen": {},
     "ILanZou": {},
     "IPFS API": {},
     "KodBox": {},
@@ -1431,6 +1444,7 @@
     "GoogleDrive": "谷歌云盘",
     "GooglePhoto": "谷歌相册",
     "HalalCloud": "HalalCloud",
+    "HalalCloudOpen": "HalalCloudOpen",
     "ILanZou": "蓝奏云优享版",
     "IPFS API": "IPFS API",
     "KodBox": "可道云",
