--- a/src/lang/zh-CN/settings_other.json
+++ b/src/lang/zh-CN/settings_other.json
@@ -14,6 +14,8 @@
   "set_115": "设置 115",
   "115_open": "115 开放平台",
   "set_115_open": "设置 115 开放平台",
+  "123_open": "123 Open",
+  "set_123_open": "Set 123 Open",
   "pikpak": "PikPak",
   "set_pikpak": "设置 PikPak",
   "thunder": "迅雷",
