--- a/src/lang/zh-CN/manage.json
+++ b/src/lang/zh-CN/manage.json
@@ -31,7 +31,7 @@
   },
   "title": "OpenList 管理",
   "not_admin": "您不是管理员用户，请使用管理员帐户登录。",
-  "logout_success": "退出成功",
+  "logout_success": "登出成功",
   "send": "发送",
   "receive": "接收",
   "received_msgs": "收到的消息",
