--- a/src/lang/zh-CN/shares.json
+++ b/src/lang/zh-CN/shares.json
@@ -30,7 +30,7 @@
     "asc": "升序",
     "desc": "降序"
   },
-  "extract_folder": "文件夹排序方式",
+  "extract_folder": "文件夹顺序",
   "extract_folders": {
     "front": "文件夹置顶",
     "back": "文件夹置底"
