--- a/src/lang/zh-CN/tasks.json
+++ b/src/lang/zh-CN/tasks.json
@@ -21,7 +21,7 @@
     "6": "即将失败",
     "7": "失败",
     "8": "等待重试",
-    "9": "重试准备中"
+    "9": "准备重试"
   },
   "retry_selected": "重试已选择",
   "cancel_selected": "取消选中",
