--- a/src/lang/zh-CN/users.json
+++ b/src/lang/zh-CN/users.json
@@ -24,13 +24,13 @@
   "disabled": "停用",
   "available": "已启用",
   "update_profile": "更新个人资料",
-  "update_profile_success": "更新个人资料成功，请重新登录。",
+  "update_profile_success": "配置更新成功，请重新登录。",
   "change_username": "修改用户名",
   "change_password": "更改密码",
   "change_password-tips": "如果您不想更改密码，请保持为空",
   "confirm_password": "确认密码",
   "confirm_password-tips": "重复您刚输入的密码",
-  "confirm_password_not_same": "您两次输入的密码不一致",
+  "confirm_password_not_same": "您输入的密码不匹配",
   "enable_2fa": "启用双因素身份验证",
   "cancel_2fa": "取消双因素身份验证",
   "cancel_2fa_success": "取消双因素身份验证成功",
