--- a/src/lang/zh-CN/settings.json
+++ b/src/lang/zh-CN/settings.json
@@ -25,6 +25,8 @@
   "ftp_public_host": "FTP 服务端公网地址",
   "ftp_tls_private_key_path": "FTP TLS 私钥路径",
   "ftp_tls_public_cert_path": "FTP TLS 证书路径",
+  "handle_hook_after_writing": "写入操作后触发目录更新钩子",
+  "handle_hook_rate_limit": "目录更新钩子遍历限制速率",
   "hide_files": "隐藏文件",
   "hide_storage_details": "隐藏驱动详情信息",
   "hide_storage_details_in_manage_page": "隐藏管理页面中的驱动详情信息",
@@ -38,6 +40,8 @@
   "ignore_direct_link_params": "忽略直链参数",
   "ignore_paths": "忽略路径",
   "ignore_paths-tips": "每行一条路径",
+  "ignore_system_files": "忽略系统文件",
+  "ignore_system_files-tips": "启用时，在上传过程中忽略常见系统文件（.DS_Store、desktop.ini、Thumbs.db以及以._开头的文件）",
   "image_types": "图片类型",
   "index_progress": "索引进度",
   "ldap_default_dir": "LDAP 默认路径",
@@ -58,6 +62,7 @@
   "max_index_depth-tips": "索引的最大深度",
   "max_server_download_speed": "最大服务器下载速度",
   "max_server_upload_speed": "最大服务器上传速度",
+  "non_efs_zip_encoding": "ZIP文件备选编码",
   "ocr_api": "OCR 接口",
   "offline_download_task_threads_num": "离线下载任务线程数",
   "offline_download_transfer_task_threads_num": "离线下载传输任务线程数",
@@ -96,12 +101,12 @@
   },
   "sftp_disable_password_login": "禁用 SFTP 密码登录",
   "share_archive_preview": "允许预览分享的压缩文件",
-  "share_force_proxy": "分享强制代理",
+  "share_force_proxy": "强制代理分享文件链接",
   "share_icon": "分享图标",
-  "share_preview": "分享预览",
+  "share_preview": "允许预览分享文件",
   "share_preview_archives_by_default": "分享默认情况下预览压缩包",
   "share_preview_download_by_default": "分享默认情况下以 Download 方式预览文件",
-  "share_summary_content": "分享摘要内容",
+  "share_summary_content": "分享链接复制内容",
   "show_disk_usage_in_plain_text": "以普通文本展示驱动空间使用情况",
   "sign_all": "签名所有",
   "site_title": "网站标题",
