--- a/src/lang/zh-CN/global.json
+++ b/src/lang/zh-CN/global.json
@@ -29,6 +29,7 @@
   "no_support_now": "暂不支持",
   "empty_input": "请输入",
   "invalid_filename_chars": "文件名不能包含: / \\ ? < > * : | \"",
+  "invalid_regex": "无效的正则表达式",
   "name": "名称",
   "go_to_storages": "转到存储"
 }
