--- a/src/lang/zh-CN/settings.json
+++ b/src/lang/zh-CN/settings.json
@@ -51,18 +51,19 @@
   "ldap_manager_dn": "LDAP 管理器 DN",
   "ldap_manager_password": "LDAP 管理员密码",
   "ldap_server": "LDAP 服务器",
+  "ldap_skip_tls_verify": "跳过 TLS 证书验证",
   "ldap_user_search_base": "LDAP 用户搜索基础",
   "ldap_user_search_filter": "LDAP 用户搜索过滤器",
   "link_expiration": "直链有效期",
   "logo": "图标",
   "main_color": "主颜色",
-  "max_client_download_speed": "最大客户端下载速度",
-  "max_client_upload_speed": "最大客户端上传速度",
+  "max_client_download_speed": "最大客户端下载速度（KiB/s）",
+  "max_client_upload_speed": "最大客户端上传速度（KiB/s）",
   "max_index_depth": "最大索引深度",
   "max_index_depth-tips": "索引的最大深度",
-  "max_server_download_speed": "最大服务器下载速度",
-  "max_server_upload_speed": "最大服务器上传速度",
-  "non_efs_zip_encoding": "ZIP文件备选编码",
+  "max_server_download_speed": "最大服务器下载速度（KiB/s）",
+  "max_server_upload_speed": "最大服务器上传速度（KiB/s）",
+  "non_efs_zip_encoding": "ZIP 文件备选编码",
   "ocr_api": "OCR 接口",
   "offline_download_task_threads_num": "离线下载任务线程数",
   "offline_download_transfer_task_threads_num": "离线下载传输任务线程数",
@@ -110,18 +111,18 @@
   "show_disk_usage_in_plain_text": "以普通文本展示驱动空间使用情况",
   "sign_all": "签名所有",
   "site_title": "网站标题",
-  "sso_application_name": "单点登录应用名称",
-  "sso_auto_register": "单点登录自动注册",
-  "sso_client_id": "单点登录客户端 ID",
-  "sso_client_secret": "单点登录客户端密钥",
-  "sso_compatibility_mode": "单点登录兼容模式",
-  "sso_default_dir": "Sso默认路径",
-  "sso_default_permission": "单点登录默认权限",
-  "sso_endpoint_name": "单点登录端点名称",
-  "sso_extra_scopes": "单点登录额外范围",
-  "sso_jwt_public_key": "单点登录 JWT 公钥",
+  "sso_application_name": "应用名称",
+  "sso_auto_register": "自动注册",
+  "sso_client_id": "客户端 ID",
+  "sso_client_secret": "客户端密钥",
+  "sso_compatibility_mode": "兼容模式",
+  "sso_default_dir": "默认根路径",
+  "sso_default_permission": "默认权限",
+  "sso_endpoint_name": "端点名称",
+  "sso_extra_scopes": "额外范围",
+  "sso_jwt_public_key": "JWT 公钥",
   "sso_login_enabled": "启用单点登录",
-  "sso_login_platform": "单点登录平台",
+  "sso_login_platform": "登录平台",
   "sso_login_platforms": {
     "Casdoor": "Casdoor",
     "Dingtalk": "钉钉",
@@ -130,8 +131,8 @@
     "Microsoft": "微软",
     "OIDC": "OIDC"
   },
-  "sso_oidc_username_key": "单点登录 OIDC 用户名键",
-  "sso_organization_name": "单点登录组织名称",
+  "sso_oidc_username_key": "OIDC 用户名键",
+  "sso_organization_name": "组织名称",
   "text_types": "文本类型",
   "token": "令牌",
   "transmission_seedtime": "Transmission 做种时间",
