--- a/src/lang/zh-CN/tasks.json
+++ b/src/lang/zh-CN/tasks.json
@@ -1,21 +1,21 @@
 {
   "offline_download": "下载文件到本地设备",
-  "offline_download_transfer": "将下载的文件传输到相应的存储",
+  "offline_download_transfer": "传输下载的文件到对应的存储",
   "upload": "上传文件到对应的存储",
-  "copy": "将文件从一个存储复制到另一个存储",
-  "move": "将文件从一个存储移动到另一个存储",
-  "decompress": "下载并解压缩",
-  "decompress_upload": "将解压出的文件上传到目标存储",
+  "copy": "复制存储中的文件到另一个存储",
+  "move": "移动存储中的文件到另一个存储",
+  "decompress": "下载并解压缩文件",
+  "decompress_upload": "上传解压的文件到目标存储",
   "done": "已完成",
   "undone": "运行中",
-  "clear_succeeded": "删除已成功",
+  "clear_succeeded": "清除成功项",
   "retry": "重试",
   "retry_failed": "重试失败项",
   "state": {
     "0": "等待中",
     "1": "运行中",
     "2": "成功",
-    "3": "正在取消",
+    "3": "取消中",
     "4": "已取消",
     "5": "错误",
     "6": "即将失败",
@@ -23,14 +23,14 @@
     "8": "等待重试",
     "9": "准备重试"
   },
-  "retry_selected": "重试已选择",
-  "cancel_selected": "取消选中",
-  "delete_selected": "删除选中",
-  "filter": "筛选器",
+  "retry_selected": "重试选中项",
+  "cancel_selected": "取消选中项",
+  "delete_selected": "删除选中项",
+  "filter": "筛选",
   "expand": "展开",
   "fold": "折叠",
   "expand_all": "全部展开",
-  "fold_all": "折叠所有",
+  "fold_all": "全部折叠",
   "attr": {
     "name": "名称",
     "creator": "创建者",
@@ -46,7 +46,7 @@
       "path": "路径"
     },
     "offline_download": {
-      "url": "链接地址",
+      "url": "网址",
       "path": "目标路径",
       "transfer_src": "源路径",
       "transfer_src_local": "源路径（本地）",
