--- a/src/lang/zh-CN/users.json
+++ b/src/lang/zh-CN/users.json
@@ -1,6 +1,6 @@
 {
   "permissions": {
-    "see_hides": "可以看到隐藏",
+    "see_hides": "隐藏可见",
     "access_without_password": "无需密码访问",
     "offline_download": "添加离线下载任务",
     "write": "创建目录或上传",
@@ -25,8 +25,8 @@
   "allow_ldap": "允许通过 LDAP 登录",
   "available": "已启用",
   "update_profile": "更新个人资料",
-  "update_profile_success": "配置更新成功，请重新登录。",
-  "change_username": "修改用户名",
+  "update_profile_success": "个人资料更新成功，请重新登录。",
+  "change_username": "更改用户名",
   "change_password": "更改密码",
   "change_password-tips": "如果您不想更改密码，请保持为空",
   "confirm_password": "确认密码",
@@ -34,9 +34,9 @@
   "confirm_password_not_same": "您输入的密码不匹配",
   "enable_2fa": "启用双因素身份验证",
   "cancel_2fa": "取消双因素身份验证",
-  "cancel_2fa_success": "取消双因素身份验证成功",
-  "2fa_already_enabled": "双因素身份验证已启用",
-  "scan_qr": "扫描二维码保存密钥",
+  "cancel_2fa_success": "成功取消双因素身份验证",
+  "2fa_already_enabled": "已启用双因素身份验证",
+  "scan_qr": "扫描二维码可保存密钥",
   "or_manual": "或者手动输入密钥",
   "input_code": "输入您的身份验证器应用中显示的验证码",
   "verify": "验证",
@@ -48,7 +48,7 @@
   "webauthn": "WebAuthn",
   "add_webauthn": "添加 WebAuthn 凭据",
   "add_webauthn_success": "WebAuthn 凭据添加成功！",
-  "webauthn_not_supported": "您的浏览器不支持 WebAuthn，或者您的 Origin 不安全",
+  "webauthn_not_supported": "您的浏览器不支持 WebAuthn ，或者您的 Origin 不安全",
   "ssh_keys": {
     "heading": "SSH 密钥",
     "add_heading": "添加新的 SSH 密钥",
